ui: stop noteForm collapsing on mobile when the keyboard is open

--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,7 @@
 @media screen and (max-width: 480px) {
   .hideable {
     width: 100%;
-    height: 75%;
+    min-height: 75%;
     top: 10vh;
   }
 }
